@@ -1,3 +1,5 @@
+1678.	[bug]		RRSIG should use TYPEXXXXX for unknown types.
+
 1677.	[bug]		dig: +aaonly didn't work, +aaflag undocumented.
 
 1676.	[placeholder]	rt10864
